Fix multer version and clean up dependencies for Railway deployment

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,17 +13,15 @@
     "mongoose": "^8.16.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "multer": "^1.4.5",
-    "nodemailer": "^6.9.7",
-    "express-validator": "^7.0.1",
-    "express-rate-limit": "^7.1.5"
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "keywords": ["portfolio", "academic", "research", "publications"],
-  "author": "Your Name",
+  "author": "Vincent Alulu",
   "license": "MIT"
 }
