--- a/package.json
+++ b/package.json
@@ -1,14 +1,42 @@
 {
   "name": "academic-portfolio",
   "version": "1.0.0",
-  "description": "Academic portfolio backend API",
-  "main": "backend/server.js",
+  "private": true,
+  "description": "Academic Portfolio with React and Supabase",
   "scripts": {
-    "start": "node backend/server.js",
-    "build": "echo 'Backend only - no frontend build needed'",
-    "install": "cd backend && npm install"
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "migrate": "node scripts/migrateToSupabase.js"
   },
-  "engines": {
-    "node": ">=18.0.0"
+  "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
+    "react-scripts": "5.0.1"
+  },
+  "devDependencies": {
+    "dotenv": "^16.6.1",
+    "mongoose": "^8.21.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
