--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "academic-portfolio",
+  "name": "rosario-arial-portfolio",
   "version": "1.0.0",
   "private": true,
-  "description": "Academic Portfolio with React and Supabase",
+  "description": "Rosario Arial - Professional Portfolio",
+  "author": "Rosario Arial",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "migrate": "node scripts/migrateToSupabase.js"
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
@@ -18,10 +18,6 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "dotenv": "^16.3.1",
-    "mongodb": "^6.0.0"
   },
   "eslintConfig": {
     "extends": [
